<resources>
    <string name="app_name">FitSheild</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="signup">SignUp</string>
    <string name="password">Password</string>
</resources>